<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>marcclaessens</groupId>
	<artifactId>alarmclock</artifactId>
	<version>2.4.0-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<!-- dependencies -->
		<json.version>20250517</json.version>
		<log4j.version>2.23.1</log4j.version>
		<rome.version>2.1.0</rome.version>
		<commons.lang.version>3.19.0</commons.lang.version>
		<httpclient.version>4.5.14</httpclient.version>
		
		<!-- plugins -->
		<mvn.assembly.version>3.7.1</mvn.assembly.version>
		<mvn.compiler.version>3.14.1</mvn.compiler.version>
		<mvn.enforcer.version>3.6.2</mvn.enforcer.version>
		<mvn.jar.version>3.4.2</mvn.jar.version>
		<mvn.versions.version>2.19.1</mvn.versions.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
	    	<groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>${commons.lang.version}</version>
		</dependency>

		<dependency>
			<groupId>javazoom</groupId>
			<artifactId>jlayer</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json.version}</version>
		</dependency>
		<!-- rss feed -->
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>${rome.version}</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.httpcomponents</groupId>
		  <artifactId>httpclient</artifactId>
		  <version>${httpclient.version}</version>
		</dependency>
		
		
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${mvn.compiler.version}</version>
				<configuration>
					<release>24</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${mvn.enforcer.version}</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>17</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${mvn.jar.version}</version>
				<configuration>
					<excludes>
						<exclude>app.css</exclude>
						<exclude>app.properties</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${mvn.assembly.version}</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>net.mcl.alarmclock.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${mvn.versions.version}</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>display-parent-updates</goal>
							<goal>display-dependency-updates</goal>
							<goal>display-extension-updates</goal>
							<goal>display-plugin-updates</goal>
							<goal>display-property-updates</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
